# genetic-algorithm

./: .gitignore  .jscpd.json  CHANGELOG.md  CLAUDE.md  COMPUTE.md  README.md  backend-prd.json  genetics-prd.json  index.html  knip.json  neat-prd.json  next.config.js  package-lock.json  package.json  prd.json  react-migration.md  setup.sh  tsconfig.json  tsconfig.tsbuildinfo  v2-prd.json  vitest.config.ts
backend/: .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_creature_performances.py  003_add_fitness_over_time.py  004_add_adaptive_mutation_state.py  005_add_neat_innovation_counters.py  56f5a434d092_add_activations_per_frame_to_creature_.py
backend/app/: __init__.py  main.py
backend/app/api/: creatures.py  evolution.py  generations.py  genetics.py  runs.py  simulation.py  test_integration.py  test_longest_survivor_edge_cases.py  test_runs_api.py  test_simulation_api.py
backend/app/core/: config.py  database.py  device.py
backend/app/genetics/: __init__.py  crossover.py  fitness_sharing.py  mutation.py  neat_crossover.py  neat_distance.py  neat_mutation.py  population.py  selection.py  speciation.py  test_crossover_integration.py  test_fitness_sharing.py  test_fitness_sharing_edge_cases.py  test_genetics.py  test_mutation_integration.py  test_neat_adversarial.py  test_neat_bugs.py  test_speciation.py  (+15 more)
backend/fixtures/: test_genomes.json
backend/notebooks/: activation_investigation.ipynb  investigate_neural_oscillation.ipynb  neat_plateau_analysis.ipynb
(+760 files in other folders)
